# dns-syncer

./: .env.example  .gitignore  LICENSE  README.md  manifest.json  update.sh
agent-workspace/: PRD.md
agent-workspace/assets/ui-inspiration/: README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  api.py  cli.py  cloudflare_client.py  config_store.py  integration_engine.py  ip_provider.py  log_store.py  main.py  models.py  paths.py  secret_store.py  settings.py  sync_engine.py
backend/tests/: conftest.py  test_api.py  test_config_store.py  test_ip_provider.py  test_log_store.py  test_sync_engine.py
docs/: CLOUDFLARE_TOKEN.md  INSTALL.md  TROUBLESHOOTING.md
frontend/: index.html
frontend/js/: api.js  app.js  format.js  state.js
frontend/js/screens/: integrations.js  logs.js  overview.js  records.js  settings.js
frontend/styles/: app.css  base.css  tokens.css
installer/: install.sh  postinstall.md  uninstall.sh
scripts/: build.sh  dev.sh  lint.sh
systemd/: dns-syncer-sync.service  dns-syncer.service  dns-syncer.timer
