[project]
name = "dns-syncer"
version = "0.2.2"
description = "DNS Syncer by DataDreamer — lightweight Cloudflare DNS updater for Raspberry Pi"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dns-syncer = "app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
